--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <application android:allowBackup="false" android:label="@string/app_name" android:icon="@mipmap/ic_launcher">
         <activity android:name=".LogonScreen"
-				android:label="@string/app_name"
-				android:theme="@android:style/Theme.Material">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Material"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
